# kolibri_base

./: CMakeLists.txt  FileXorProcessor.pro  README.md  build_mingw.bat
src/: fileprocessor.cpp  fileprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h
